--- a/html5-sakura/index.html
+++ b/html5-sakura/index.html
@@ -7,22 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="./index.js"></script>
   <style type="text/css">
-    .container {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    canvas {
       background-color: #000;
       color: #fff;
+      cursor: pointer;
     }
   </style>
 </head>
 
 <body>
-  <div class="container" id="container">
-    <canvas id="canvas" class="canvas-wrap"></canvas>
-  </div>
-  <script type="text/javascript" src="./index.js"></script>
+  <canvas id="canvas" class="canvas-wrap"></canvas>
+
 </body>
 
 </html>
